[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doc-html-skill"
version = "0.1.0"
description = "Schema-first branded HTML documentation suite: deterministic renderer, widget library, three layout skins, dark mode, Mermaid theming, and layered validation for agent-authored review artifacts."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "manykarim" }]
keywords = ["documentation", "html", "mermaid", "claude", "agent-skills", "renderer", "wcag"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Topic :: Documentation",
  "Topic :: Text Processing :: Markup :: HTML",
]
dependencies = [
  "jinja2>=3.1",
  "jsonschema>=4.21",
  "pyyaml>=6.0",
  "referencing>=0.33",
]

[project.optional-dependencies]
pdf = ["playwright>=1.40"]

[project.urls]
Homepage = "https://github.com/manykarim/doc-html-skill"
Changelog = "https://github.com/manykarim/doc-html-skill/blob/main/CHANGELOG.md"

[project.scripts]
doc-html-render = "doc_html_skill.cli:render"
doc-html-validate = "doc_html_skill.cli:validate"
doc-html-export-pdf = "doc_html_skill.cli:export_pdf"

[tool.hatch.build.targets.wheel]
packages = ["doc_html_skill"]

[tool.hatch.build.targets.wheel.force-include]
".claude/skills/render-branded-html" = "doc_html_skill/skills/render-branded-html"
".claude/skills/validate-branded-doc" = "doc_html_skill/skills/validate-branded-doc"
".claude/skills/review-doc-orchestrator" = "doc_html_skill/skills/review-doc-orchestrator"
".claude/skills/architecture-review-doc" = "doc_html_skill/skills/architecture-review-doc"
".claude/skills/user-story-review-doc" = "doc_html_skill/skills/user-story-review-doc"
".claude/skills/prd-review-doc" = "doc_html_skill/skills/prd-review-doc"
".claude/skills/risk-analysis-review-doc" = "doc_html_skill/skills/risk-analysis-review-doc"
".claude/skills/test-charter-review-doc" = "doc_html_skill/skills/test-charter-review-doc"
"examples" = "doc_html_skill/examples"

[tool.hatch.build.targets.sdist]
include = [
  "doc_html_skill",
  ".claude/skills",
  "examples",
  "README.md",
  "CHANGELOG.md",
  "LICENSE",
  "pyproject.toml",
]
